# grpc-mcp-gateway

./: .gitignore  .goreleaser.yaml  BUILD.bazel  Justfile  LICENSE  MODULE.bazel  README.md  go.mod  go.sum  go.work.sum
.bcr/: README.md  metadata.template.json  presubmit.yml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci.yml  publish-bcr.yaml  release.yaml  release.yml
examples/: README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum
examples/go/: README.md
examples/go/counter/: impl.go  main.go  register_test.go  smoke_test.go
examples/go/grpc-gateway/: main.go
examples/go/http/: impl.go  main.go  smoke_test.go
examples/go/sse/: impl.go  main.go
examples/go/stdio/: main.go
examples/proto/counter/v1/: counter.proto  counter_service.proto
examples/proto/todo/v1/: todo.proto  todo_mcp.proto  todo_service.proto
examples/python/: README.md  pyproject.toml  smoke_test.py
examples/rust/: Cargo.toml
mcp/: README.md
mcp/protobuf/: BUILD.bazel  README.md  doc.go
mcp/protobuf/mcppb/: BUILD.bazel  annotations.pb.go  app.pb.go  doc.go  elicitation.pb.go  enum.pb.go  field.pb.go  field_type.pb.go  mime_type.pb.go  progress.pb.go  prompt.pb.go  resource.pb.go  service_options.pb.go
mcp/protobuf/python/: README.md  pyproject.toml
mcp/protobuf/python/mcp/protobuf/: annotations_pb2.py  app_pb2.py  elicitation_pb2.py  enum_pb2.py  field_pb2.py  field_type_pb2.py  mime_type_pb2.py  progress_pb2.py  prompt_pb2.py  resource_pb2.py  service_options_pb2.py
mcp/protobuf/rust/: Cargo.toml  README.md
mcp/protobuf/rust/src/: lib.rs
plugin/cmd/protoc-gen-mcp/: BUILD.bazel  main.go
plugin/generator/: BUILD.bazel  cpp.go  generator.go  options_extract.go  progress_stream.go  python.go  rust.go  schema.go  template.go
plugin/generator/templates/: BUILD.bazel  go.tpl  python.tpl  rust.tpl
plugin/generator/templates/cpp/: bridge.tpl  handler.tpl  impl.tpl  mcp.h.tpl
proto/: README.md  buf.gen.yaml  buf.yaml
proto/mcp/protobuf/: BUILD.bazel  annotations.proto  app.proto  elicitation.proto  enum.proto  field.proto  field_type.proto  mime_type.proto  progress.proto  prompt.proto  resource.proto  service_options.proto
runtime/: BUILD.bazel  README.md  doc.go  primitives.go
