""" Bazel Module Project for gRPC MCP Gateway """

module(
    name = "grpc_mcp_gateway",
    version = "1.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.50.0", dev_dependency = True)

bazel_dep(name = "googleapis", version = "0.0.0-20260422-20ac242a")
bazel_dep(name = "protobuf", version = "35.0-rc1")

# Configure rules_go to download and build with a specific version of Go.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.6")

# Configure Gazelle to load the list of Go modules from go.mod using the
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go", "com_github_google_jsonschema_go", "com_github_modelcontextprotocol_go_sdk", "org_golang_google_genproto_googleapis_api", "org_golang_google_grpc", "org_golang_google_protobuf")
