load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runtime",
    srcs = [
        "config.go",
        "doc.go",
        "error.go",
        "health.go",
        "metadata.go",
        "primitives.go",
        "schema.go",
        "server.go",
        "server_endpoint.go",
        "stream.go",
    ],
    importpath = "github.com/the-protobuf-project/grpc-mcp-gateway/runtime",
    visibility = ["//visibility:public"],
    deps = [
        "//mcp/protobuf/mcppb",
        "@com_github_google_jsonschema_go//jsonschema",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "runtime_test",
    srcs = ["metadata_test.go"],
    embed = [":runtime"],
    deps = ["@org_golang_google_grpc//metadata"],
)
