[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.13.0",
    "googleapis-common-protos>=1.74.0",
    "grpcio>=1.78.0",
    "grpcio-reflection>=1.80.0",
    "mcp>=1.27.0",
    "protobuf>=7.34.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

# Override: googleapis-common-protos declares protobuf<7; we need 7.x for buf-generated code.
# The mcp.protobuf annotation types are generated client-side and vendored under
# proto/generated/python/mcp, so no external package dependency is required.
[tool.uv]
override-dependencies = ["protobuf>=7.34.1"]
