[package]
name = "todo-mcp-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"

[lib]
name = "todo_mcp_example"
path = "src/lib.rs"

[[bin]]
name = "http"
path = "src/bin/http.rs"

[[bin]]
name = "stdio"
path = "src/bin/stdio.rs"

[[bin]]
name = "sse"
path = "src/bin/sse.rs"

[dependencies]
async-trait = "0.1"
prost = "0.14"
prost-types = "0.14"
rmcp = { version = "1.6", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
    "elicitation",
] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"
