load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "generator",
    srcs = [
        "cpp.go",
        "factory.go",
        "generator.go",
        "helpers.go",
        "options_extract.go",
        "options_google.go",
        "options_schema.go",
        "options_types.go",
        "progress_stream.go",
        "python.go",
        "rust.go",
        "schema.go",
        "schema_wkt.go",
        "template.go",
        "tool_name.go",
    ],
    importpath = "github.com/machanirobotics/grpc-mcp-gateway/plugin/generator",
    visibility = ["//visibility:public"],
    deps = [
        "//mcp/protobuf/mcppb",
        "//plugin/generator/templates",
        "@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate",
        "@org_golang_google_genproto_googleapis_api//annotations",
        "@org_golang_google_protobuf//compiler/protogen",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)
