load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mcppb",
    srcs = [
        "annotations.pb.go",
        "app.pb.go",
        "doc.go",
        "elicitation.pb.go",
        "enum.pb.go",
        "field.pb.go",
        "field_type.pb.go",
        "mime_type.pb.go",
        "progress.pb.go",
        "prompt.pb.go",
        "resource.pb.go",
        "service_options.pb.go",
    ],
    importpath = "github.com/machanirobotics/grpc-mcp-gateway/mcp/protobuf/mcppb",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_genproto_googleapis_api//annotations",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)
