[package]
name = "mcp-protobuf"
version = "1.5.3"
edition = "2024"
rust-version = "1.93.0"
description = "Pre-compiled Protocol Buffer types for grpc-mcp-gateway (mcp.protobuf)"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/the-protobuf-project/grpc-mcp-gateway"
keywords = ["grpc", "mcp", "protobuf", "mcp-server"]
categories = ["encoding", "api-bindings"]
include = ["src/", "Cargo.toml", "README.md"]

[dependencies]
prost = "0.14"
prost-types = "0.14"
