load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protoc-gen-mcp_lib",
    srcs = ["main.go"],
    importpath = "github.com/machanirobotics/grpc-mcp-gateway/plugin/cmd/protoc-gen-mcp",
    visibility = ["//visibility:private"],
    deps = [
        "//plugin/generator",
        "@org_golang_google_protobuf//compiler/protogen",
    ],
)

go_binary(
    name = "protoc-gen-mcp",
    embed = [":protoc-gen-mcp_lib"],
    visibility = ["//visibility:public"],
)
